# knowledge-base

./: AIX_3D_坐标卡_贾静雯.html  营运管理学习总结.md
29+基于OpenHarmony的智慧农业控制系统+贾静雯+2023级+审计学/个人贡献说明/: 个人贡献说明书_智慧农业项目.docx
29+基于OpenHarmony的智慧农业控制系统+贾静雯+2023级+审计学/过程证据材料/: P29项目任务书.xlsx
29+基于OpenHarmony的智慧农业控制系统+贾静雯+2023级+审计学/项目一页纸介绍/: 基于OpenHarmony开发的智慧农业控制系统_项目介绍.docx
my_project/: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
my_project/docs/: README.md
my_project/src/my_project/: __init__.py  main.py
my_project/tests/: test_main.py
skill-creation-guide/: AI技能包完整指南.md  README.md  SKILL.md
skill-creation-guide/references/: domain-examples.md  freedom-levels.md  verification-checklist.md
skill-creation-guide/scripts/: init_skill.py  package_skill.py
