[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "my_project"
version = "0.1.0"
description = "A short description of your project"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Your Name", email = "your@email.com" }]
requires-python = ">=3.9"
keywords = ["python", "project"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.8",
    "pre-commit>=3.6",
]

[project.scripts]
my-project = "my_project.main:main"

[project.urls]
Homepage = "https://github.com/your-username/my_project"
Issues = "https://github.com/your-username/my_project/issues"

# ---------- Tool configs ----------

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src/my_project --cov-report=term-missing"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "B", "C4", "SIM"]
ignore = ["ANN101"]

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true
